--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,9 @@
 	"extensions": [
 		"dbaeumer.vscode-eslint",
 		"mtxr.sqltools",
-		"mtxr.sqltools-driver-pg"
+		"mtxr.sqltools-driver-pg",
+		"ligolang-publish.ligo-vscode",
+		"ligolang.pascaligo-vscode"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
