--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NFT-Imo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "tests": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha --timeout 10000 -r ts-node/register 'tests.contracts/**/*.ts'",
     "dev": "env $(cat .env.dev | grep -v \"#\" | xargs) NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "repository": {
@@ -24,8 +24,12 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.16",
     "@types/express": "^4.17.11",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.41",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
     "truffle": "^5.5.0-tezos.4",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
